--- a/src/app.css
+++ b/src/app.css
@@ -9,4 +9,12 @@
 		font-weight: bold;
 		font-display: swap;
 	}
+
+	@font-face {
+		font-family: 'Inter';
+		font-style: normal;
+		font-weight: 100 900;
+		font-display: optional;
+		src: url(/fonts/inter-var-latin.woff2) format('woff2');
+	}
 }
