--- a/src/app.css
+++ b/src/app.css
@@ -17,4 +17,8 @@
 		font-display: optional;
 		src: url(/fonts/inter-var-latin.woff2) format('woff2');
 	}
+
+	.nav-item {
+		@apply font-medium text-gray-700 text-lg hover:text-gray-400 transition ease-in-out duration-300 mb-2 lg:mb-0;
+	}
 }
